# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/init_lite/begetd.gni")
import("//build/ohos.gni")

ohos_shared_library("libbootchart") {
  sources = [ "bootchart/bootchart.c" ]

  include_dirs = [
    "//base/startup/init_lite/services/include",
    "//base/startup/init_lite/services/include/param",
    "//base/startup/init_lite/services/log",
    "//base/startup/init_lite/services/plugin",
    "//base/startup/init_lite/interfaces/innerkits/include",
    "//third_party/bounds_checking_function/include",
  ]

  deps = [
    "//base/startup/init_lite/services/log:init_log",
    "//base/startup/init_lite/services/utils:libinit_utils",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/cJSON:cjson_static",
  ]

  external_deps = [ "init:libinit_plugin_engine" ]

  part_name = "init"
  if (target_cpu == "arm64") {
    module_install_dir = "lib64/plugin"
  } else {
    module_install_dir = "lib/plugin"
  }
}

group("plugin") {
  deps = [ ":libbootchart" ]
}
