# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("propertyserver") {
  sources = [
    "manager/property_manager.c",
    "manager/property_trie.c",
    "manager/property_cache.c",
    "service/property_service.c",
    "service/property_persist.c",
    "//base/startup/init_lite/services/src/init_utils.c",
  ]

  include_dirs = [
    "include",
    "//base/startup/init_lite/services/include/property",
    "//base/startup/init_lite/services/include/trigger",
    "//base/startup/init_lite/services/include",
    "//third_party/libuv/include",
    "//third_party/cJSON",
  ]

  deps = [
     "//third_party/libuv:uv_static",
     "//base/startup/init_lite/services/trigger:triggerservice",
     "//third_party/bounds_checking_function:libsec_static",
  ]
  part_name = "init"
  subsystem_name = "startup"
}

ohos_static_library("propertyclient") {
  sources = [
    "manager/property_manager.c",
    "client/property_request.c",
    "manager/property_trie.c",
    "manager/property_cache.c",
    "//base/startup/init_lite/services/src/init_utils.c",
  ]

  include_dirs = [
    "include",
    "//base/startup/init_lite/services/include/property",
    "//base/startup/init_lite/services/include/trigger",
    "//base/startup/init_lite/services/include",
    "//third_party/libuv/include",
    "//third_party/cJSON",
  ]

  deps = [
     "//third_party/libuv:uv_static",
     "//third_party/bounds_checking_function:libsec_static",
  ]
  part_name = "init"
  subsystem_name = "startup"
}

ohos_executable("getparam") {
    sources = [
      "cmd/property_get.c",
    ]
    include_dirs = [
      "include",
      "//base/startup/init_lite/services/include/property",
      "//base/startup/init_lite/services/include/trigger",
      "//base/startup/init_lite/services/include",
    ]
    deps = [
      "//base/startup/init_lite/services/property:propertyclient",
      "//third_party/bounds_checking_function:libsec_static",
      "//third_party/cJSON:cjson_static",
    ]
    install_enable = true
    part_name = "init"
}

ohos_executable("setparam") {
    sources = [
      "cmd/property_set.c",
    ]
    include_dirs = [
      "include",
      "//base/startup/init_lite/services/include/property",
      "//base/startup/init_lite/services/include/trigger",
      "//base/startup/init_lite/services/include",
    ]
    deps = [
      "//base/startup/init_lite/services/property:propertyclient",
      "//third_party/bounds_checking_function:libsec_static",
      "//third_party/cJSON:cjson_static",
    ]
    install_enable = true
    part_name = "init"
}
