# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

common_include_dirs = [ "." ]

ohos_executable("BMStartupTest") {
  sources = [
    "benchmark_fwk.cpp",
    "parameter_benchmark.cpp",
  ]

  defines = [ "_GNU_SOURCE" ]
  include_dirs = common_include_dirs
  deps = [ "../../interfaces/innerkits:libbegetutil" ]
  external_deps = [
    "benchmark:benchmark",
    "bounds_checking_function:libsec_static",
  ]
  install_images = [ "system" ]
  install_enable = true

  part_name = "init"
  subsystem_name = "startup"
}
